ingress/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: phpdemo-proxy
  namespace: phpdemo
spec:
  virtualhost:
    fqdn: phpdemo.example.com
  routes:
  - services:
    - name: phpdemo
      port: 80
    conditions:
      - prefix: /
