ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: phpdemo-ingress
  namespace: 
spec:
  rules:
  - host: phpdemo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpdemo 
            port:
              number: 8080
